z-index Bug fix!
git-svn-id: https://plugins.svn.wordpress.org/sexy-contact-form/tags/0.9.4@814698 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/assets/css/main.css
+++ b/includes/assets/css/main.css
@@ -846,6 +846,7 @@ img.sexy_captcha {
 	width: auto !important;
 	text-indent: 0px !important;
 	background: none !important;
+	z-index: 10 !important;
 }
 .sexycontactform_wrapper .powered_by span {
 	text-decoration: none !important;
@@ -864,6 +865,7 @@ img.sexy_captcha {
 	width: auto !important;
 	text-indent: 0px !important;
 	background: none !important;
+	z-index: 10 !important;
 }
 .sexycontactform_wrapper .powered_by span:hover {
 	text-decoration: none !important;
@@ -885,19 +887,4 @@ img.sexy_captcha {
 }
 .sexycontactform_hidden {
 	display: none !important;
-}
-/*extra rules*/
-.sexycontactform_wrapper_extra .powered_by span {
-	text-decoration: none !important;
-	display: inline-block !important;
-	margin: 0px !important;
-	padding: 0px !important;
-	font-size: 14px !important;
-	bottom: 0 !important;
-	left: 0 !important;
-	right: 0 !important;
-	top: 0 !important;
-	box-shadow: inset 0 0 15px 2px rgba(253,18,8,0.78) !important;
-	text-shadow: 0 -1px 1px rgba(0,0,0,0.82) !important;
-	background-color: #FFCC00 !important;
 }
